# course_work_6

./: .env.sample  README.md  data.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_owner.py  0003_alter_blog_owner.py  0004_blog_publshed_at_alter_blog_is_published.py  0005_alter_blog_publshed_at.py  0006_rename_publshed_at_blog_published_at.py
config/: settings.py  urls.py
mailer/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailer/migrations/: 0001_initial.py  0002_initial.py  0003_alter_attempt_newsletter_alter_client_owner_and_more.py  0004_remove_newsletter_finish_alter_newsletter_frequency_and_more.py  0005_alter_newsletter_clients_alter_newsletter_frequency_and_more.py  0006_alter_newsletter_frequency_alter_newsletter_status.py  0007_alter_newsletter_frequency_alter_newsletter_status.py  0008_alter_newsletter_frequency_alter_newsletter_status.py  0009_alter_newsletter_frequency_alter_newsletter_status.py  0010_alter_newsletter_status.py  0011_alter_newsletter_options_newsletter_is_block_and_more.py  0012_alter_newsletter_frequency_alter_newsletter_status.py  0013_alter_newsletter_frequency_alter_newsletter_status.py  0014_alter_newsletter_frequency.py  0015_newsletter_finish_alter_newsletter_frequency_and_more.py  0016_alter_newsletter_options_alter_newsletter_frequency_and_more.py  0017_alter_newsletter_frequency_alter_newsletter_status.py  0018_alter_newsletter_frequency_alter_newsletter_status.py  (+3 more)
services/: scheduler.py
users/: forms.py  models.py  urls.py  views.py
(+31 files in other folders)
